--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro:ital,wght@0,400;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Occasions</title>
   </head>
   <body>
