--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro:ital,wght@0,400;0,900;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
     <title>Occasions</title>
   </head>
   <body>
