--- a/functions/scheduledOcc/emailTemplate.html
+++ b/functions/scheduledOcc/emailTemplate.html
@@ -1,12 +1,4 @@
-const emailTemplate = (
-  occasion,
-  userFirtName,
-  userLastName,
-  cardUrl,
-  cardName,
-  occasionMessage
-) => {
-  return `<html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Occasions email</title>
@@ -58,7 +50,8 @@ const emailTemplate = (
                 >
                   <tr>
                     <td align="center">
-                      <h1 align="center"
+                      <h1
+                        align="center"
                         style="
                           margin: 0px;
                           font-size: 50px;
@@ -68,7 +61,8 @@ const emailTemplate = (
                       >
                         Happy ${occasion}!
                       </h1>
-                      <h4 align="center"
+                      <h4
+                        align="center"
                         style="
                           margin-top: 5px;
                           font-size: 25px;
@@ -78,7 +72,8 @@ const emailTemplate = (
                       >
                         From ${userFirtName} ${userLastName}
                       </h4>
-                      <h4 align="center"
+                      <h4
+                        align="center"
                         style="
                           font-size: 13px;
                           color: gray;
@@ -99,34 +94,30 @@ const emailTemplate = (
                       />
                     </td>
                   </tr>
-                  ${
-                    occasionMessage.trim().length < 1
-                      ? ``
-                      : `<tr>
-                  <td align="center">
-                    <h4
-                      style="
-                        font-size: 13px;
-                        color: gray;
-                        font-family: Arial, Helvetica, sans-serif;
-                        margin-top: 20px;
-                      "
-                    >
-                      And he sent you this message:
-                    </h4>
-                    <h4
-                      style="
-                        font-size: 13px;
-                        color: black;
-                        font-family: Arial, Helvetica, sans-serif;
-                        margin-top: 20px;
-                      "
-                    >
-                      ${occasionMessage}
-                    </h4>
-                  </td>
-                </tr>`
-                  }
+                  <tr>
+                    <td align="center">
+                      <h4
+                        style="
+                          font-size: 13px;
+                          color: gray;
+                          font-family: Arial, Helvetica, sans-serif;
+                          margin-top: 20px;
+                        "
+                      >
+                        And he sent you this message:
+                      </h4>
+                      <h4
+                        style="
+                          font-size: 13px;
+                          color: black;
+                          font-family: Arial, Helvetica, sans-serif;
+                          margin-top: 20px;
+                        "
+                      >
+                        ${occasionMessage}
+                      </h4>
+                    </td>
+                  </tr>
                 </table>
               </td>
             </tr>
@@ -166,7 +157,3 @@ const emailTemplate = (
     </table>
   </body>
 </html>
-`;
-};
-
-exports.emailTemplate = emailTemplate;
